fix add plate button overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -373,6 +373,7 @@
   border-radius: 1rem;
   background-color: white;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
 }
 .carte-category__content:hover .carte-plate__add {
   width: 2em;
