--- a/scss/layouts/_cartes-restaurants.scss
+++ b/scss/layouts/_cartes-restaurants.scss
@@ -81,6 +81,8 @@
         background-color: white;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
 
+        overflow: hidden;
+
         &:hover .carte-plate__add
         {
             width: 2em;
